--- a/src/components/HeroCta.astro
+++ b/src/components/HeroCta.astro
@@ -2,16 +2,7 @@
   <div class="hero-cta mt-24 mb-32 flex flex-col items-center gap-12 rounded-xl p-12 md:p-24">
     <h2 class="text-center text-2xl md:text-2xl text-gradient" >
         Welcome to our honey farm, where every jar of golden sweetness is a testament to our commitment to quality, 
-        sustainability, and compliance. We take pride in producing honey that not only delights the taste buds but also 
-        reflects our dedication to environmental stewardship and regulatory standards. Our bees forage on diverse, 
-        pesticide-free floral sources, ensuring that our honey captures the essence of nature's bounty without harmful 
-        additives. We maintain organic certification, adhering to strict guidelines that prioritize the health of our bees, 
-        the purity of our honey, and the protection of our environment. Additionally, our farm is certified non-GMO, 
-        guaranteeing that our honey is free from genetically modified ingredients. We are also proud to hold fair trade 
-        certification, supporting fair wages, safe working conditions, and community development. Our commitment to quality 
-        extends beyond certifications; we adhere to rigorous quality control measures and food safety standards to ensure 
-        that every jar of honey meets or exceeds regulatory requirements. When you choose our honey, you can trust that it's 
-        not only delicious but also produced with integrity, sustainability, and your well-being in mind.
+        sustainability, and compliance.
     </h2>
   </div>
 </div>
