--- a/src/components/HeroCta.astro
+++ b/src/components/HeroCta.astro
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="hero-cta mt-24 mb-32 flex flex-col items-center gap-12 rounded-xl p-12 md:p-24">
     <h2 class="text-center text-2xl md:text-2xl text-gradient" >
-        Welcome to our honey farm, where every jar of golden sweetness is a testament to our commitment to quality, 
+        Welcome to our honey farm, where every jar of golden sweetness is a testament of our commitment to quality, 
         sustainability, and compliance.
     </h2>
   </div>
@@ -11,4 +11,10 @@
   .hero-cta  {
   }
 
+  .text-gradient {
+    background: linear-gradient(315deg, var(--secondary-100) 25%, var(--secondary-300));
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 </style>
