--- a/src/assets/scss/base/_color.scss
+++ b/src/assets/scss/base/_color.scss
@@ -4,18 +4,18 @@
 
 $colors: (
   primary: (
-    100: hsl(276, 100%, 79%),
-    200: hsl(276, 79%, 69%),
-    300: hsl(276, 53%, 49%),
-    400: hsl(276, 64%, 48%),
-    500: hsl(276, 96%, 20%),
+    100: #FFE080,
+    200: #FFD54F,
+    300: #D4AF37,
+    400: #B38F26,
+    500: #8B6A0E,
   ),
   secondary: (
-    100: hsl(173, 81%, 68%),
-    200: hsl(173, 80%, 63%),
-    300: hsl(173, 72%, 57%),
-    400: hsl(173, 75%, 47%),
-    500: hsl(173, 90%, 30%),
+    100: #C69C6D,
+    200: #9A7B50,
+    300: #8B572A,
+    400: #6E4721,
+    500: #4D3318,
   ),
   neutral: (
     100: hsl(0 0% 100%),
