--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -21,7 +21,7 @@ const {
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="/public/honey_pot.png" />
+    <link rel="icon" type="image/png" sizes="550x550" href="/public/honey_pot.png" />
 
     <SiteMeta
       title={title}
